k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meongnyang-backend-deployment
  namespace: meongnyang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meongnyang-backend
  template:
    metadata:
      labels:
        app: meongnyang-backend
    spec:
      containers:
      - name: meongnyang-backend-container
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/meongnyang/backend:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "1000Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: meongnyang-backend-service
  namespace: meongnyang
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: meongnyang-backend
