k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meongnyang-redis-deployment
  namespace: meongnyang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meongnyang-redis
  template:
    metadata:
      # 아래의 labels는 service의 selector.app과 일치해야함
      labels:
        app: meongnyang-redis
    spec:
      containers:
      - name: meongnyang-redis-container
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: meongnyang-redis-service
  namespace: meongnyang
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: meongnyang-redis
